[package]
name = "rust-serializer-benchmark"
version = "0.1.0"
authors = ["ilumsden <lumsden.ian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
serde_cbor = "0.11.1"
rmp-serde = "0.14.0"
toml = "0.5.6"
serde-pickle = "0.6.0"
ron = "0.5.1"
avro-rs = "0.6.6"
